--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kipngetich Kosgei | Full-Stack Developer</title>
-    <meta name="description" content="Versatile Full-Stack Developer with expertise in React, Python, and Flask. Building scalable web applications and IT solutions in Nairobi, Kenya." />
+    <title>Kipngetich Kosgei | Full-Stack Software Developer</title>
+    <meta name="description" content="Versatile Full-Stack Software Developer with expertise in React, Python, and Flask. Building scalable web applications and IT solutions in Nairobi, Kenya." />
     <meta name="author" content="Kipngetich Kosgei" />
-    <meta name="keywords" content="Full-Stack Developer, React, Python, Flask, Software Engineer, Nairobi, Kenya" />
+    <meta name="keywords" content="Full-Stack Software Developer, Typescript, React, Python, Flask, Software Engineer, Nairobi, Kenya" />
 
-    <meta property="og:title" content="Kipngetich Kosgei | Full-Stack Developer" />
-    <meta property="og:description" content="Versatile Full-Stack Developer with expertise in React, Python, and Flask. Building scalable web applications." />
+    <meta property="og:title" content="Kipngetich Kosgei | Full-Stack Software Developer" />
+    <meta property="og:description" content="Versatile Full-Stack Software Developer with expertise in React, Python, and Flask. Building scalable web applications." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
