--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kipngetich Kosgei | Full-Stack Software Developer</title>
-    <meta name="description" content="Versatile Full-Stack Software Developer with expertise in React, Python, and Flask. Building scalable web applications and IT solutions in Nairobi, Kenya." />
+    <meta name="description" content="Versatile Full-Stack Software Developer with expertise in React, Python, 
+    and Flask. Building scalable web applications and IT solutions in Nairobi, Kenya." />
     <meta name="author" content="Kipngetich Kosgei" />
     <meta name="keywords" content="Full-Stack Software Developer, Typescript, React, Python, Flask, Software Engineer, Nairobi, Kenya" />
 
@@ -15,7 +16,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@kipngetichkosgei" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
