--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kipngetich Kosgei | Full-Stack Software Developer</title>
-    <meta name="description" content="Versatile Full-Stack Software Developer with expertise in React, Python, 
-    and Flask. Building scalable web applications and IT solutions in Nairobi, Kenya." />
+
+    <!-- Favicon / Browser Tab Icon -->
+    <link rel="icon" type="image/png" href="/logo1.png" />
+
+    <meta name="description" content="Versatile Full-Stack Software Developer with expertise in React, Python, and Flask. Building scalable web applications and IT solutions in Nairobi, Kenya." />
     <meta name="author" content="Kipngetich Kosgei" />
-    <meta name="keywords" content="Full-Stack Software Developer, Typescript, React, Python, Flask, Software Engineer, Nairobi, Kenya" />
 
-    <meta property="og:title" content="Kipngetich Kosgei | Full-Stack Software Developer" />
-    <meta property="og:description" content="Versatile Full-Stack Software Developer with expertise in React, Python, and Flask. Building scalable web applications." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@kipngetichkosgei" />
-    <meta name="twitter:image" content="/opengraph-image-p98pqg.png" />
+    <!-- Open Graph / Twitter (for social previews) -->
+    <meta property="og:image" content="/logo1.png" />
+    <meta name="twitter:image" content="/logo1.png" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
